--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,11 @@
 body {
-  background-color: brown;
+  font-family: sans-serif;
+  font-size: 30px;
 }
+
 h1 {
-  background-color: blanchedalmond;
+  color: var(--primary);
 }
 p {
-  color: var(--primary);
+  color: blue;
 }
