--- a/src/components/Logo/styles.module.css
+++ b/src/components/Logo/styles.module.css
@@ -3,20 +3,24 @@
   align-items: center;
   justify-content: center;
   gap: 2.4rem;
-  margin-top: 3.2rem;
+  padding-top: 3.2rem;
 }
 .logoLink {
-  background: red;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  gap: 0.2rem;
+  gap: 0.4rem;
   font-size: 4.2rem;
   text-decoration: none;
   color: var(--primary);
+  transition: all 5ms ease-in-out;
 }
+.logoLink:hover {
+  filter: brightness(50%);
+}
+
 .logoLink svg {
   width: 6.4rem;
   height: 6.4rem;
