--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -11,7 +11,7 @@
   --gray-900: #0a0f1a;
 
   --primary-light: #4de7b7;
-  --primary: #0da170;
+  --primary: #09ab6b;
   --primary-dark: #065f46;
 
   --link-color: #10b981;
