--- a/src/components/CountDown/styles.module.css
+++ b/src/components/CountDown/styles.module.css
@@ -1,7 +1,6 @@
-.logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2.4rem;
-  padding-top: 3.2rem;
+.container {
+  font-size: clamp(8rem, 30vw, 16rem);
+  font-weight: bold;
+  text-align: center;
+  line-height: 1.3;
 }
